Added html elements and basic html skeleton to page

--- a/index.html
+++ b/index.html
@@ -7,10 +7,33 @@
     </head>
     <body>
         <header>
-
+            <h1>Stephen Merki's Portfolio</h1>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">portfolio</a></li>
+            </ul>
         </header>
         <main>
-
+            <section class="content">
+               <section class="about" id="about">
+                    <section class="aboutHeading">
+                        <h2>About Me</h2>
+                    </section>
+                    <section class="aboutContent">
+                        <p>I am a web development bootcamp student working on improving my skills in <strong>Web Development</strong>. 
+                            I have one year of Web Development experience working for a startup by the name of IgnisSolutions.
+                            </p>
+                    </section>
+                    <section class="portfolio" id="portfolio">
+                        <section class="portfolioHeading">
+                            <h2>Portfolio</h2>
+                        </section>
+                        <section class="portfolioContent">
+                            
+                        </section>
+                    </section>
+               </section>
+            </section>
         </main>
         <footer>
             
