--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="./assets/css/styles.css">
         <title>Portfolio</title>
     </head>
     <body>
         <header>
             <h1>Stephen Merki's Portfolio</h1>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">portfolio</a></li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
             <section class="content">
