added content and images along with improved styles

--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@
     </head>
     <body>
         <header>
-            <h1>Stephen Merki's Portfolio</h1>
-            <nav>
-                <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                </ul>
-            </nav>
+            <section class="header">
+                <h1>Stephen Merki's Portfolio</h1>
+            </section>
         </header>
         <main>
             <section class="content">
@@ -22,23 +18,36 @@
                         <h2>About Me</h2>
                     </section>
                     <section class="aboutContent">
-                        <p>I am a web development bootcamp student working on improving my skills in <strong>Web Development</strong>. 
-                            I have one year of Web Development experience working for a startup by the name of IgnisSolutions.
-                            </p>
+                        <p>
+                            My name is Stephen (Stee-v-en) Merki (Mur-key). I am currently enrolled in University Wisconsin Coding Bootcamp.
+                            I have two associates degrees; Network Administration, Network and Software Support. I have one year professional
+                            experience working in web development for Ignis Solutions on their website 
+                            <a href="ultimatewrestlingtrivia.com">ultimatewrestlingtrivia.com</a> as a full stack web developer. 
+                        </p>
+                        <p>
+                            Programming languages that I am comfortable
+                            in are HTML, CSS, PHP, JavaScript (DOM), Java, and C++.
+                        </p>
                     </section>
-                    <section class="portfolio" id="portfolio">
-                        <section class="portfolioHeading">
-                            <h2>Portfolio</h2>
-                        </section>
-                        <section class="portfolioContent">
-                            
-                        </section>
-                    </section>
+               </section>
+               <br>
+               <section class="portfolio" id="portfolio">
+                   <section class="portfolioHeading">
+                       <h2>Portfolio</h2>
+                   </section>
+                   <section class="portfolioContent">
+                       <section class="preworkStudyGuide">
+                            <img src="./assets/images/preworkStudy.PNG" alt="Screenshot of prework study guide website" />
+                       </section>
+                       <section class="horiseon">
+                            <img src="./assets/images/horiseon.PNG" alt="Screenshot of first project with website name of Horiseon" />
+                       </section>
+                   </section>
                </section>
             </section>
         </main>
         <footer>
-            
+            <p>GitHub: <a href="https://github.com/stev232">stev232</a></p>
         </footer>
     </body>
 </html>
