fixed overflow issue and added border between about me and portfolio

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                         <h2>About Me</h2>
                     </section>
                     <section class="aboutContent">
+                        <img src="./assets/images/stephen.jpg" alt="An image of Stephen Merki" class="personalPicture" />
                         <p>
                             My name is Stephen (Stee-v-en) Merki (Mur-key). I am currently enrolled in University Wisconsin Coding Bootcamp.
                             I have two associates degrees; Network Administration, Network and Software Support. I have one year professional
@@ -29,19 +30,29 @@
                             in are HTML, CSS, PHP, JavaScript (DOM), Java, and C++.
                         </p>
                     </section>
-               </section>
-               <br>
-               <section class="portfolio" id="portfolio">
-                   <section class="portfolioHeading">
-                       <h2>Portfolio</h2>
-                   </section>
-                   <section class="portfolioContent">
-                       <section class="preworkStudyGuide">
-                            <img src="./assets/images/preworkStudy.PNG" alt="Screenshot of prework study guide website" />
-                       </section>
-                       <section class="horiseon">
-                            <img src="./assets/images/horiseon.PNG" alt="Screenshot of first project with website name of Horiseon" />
-                       </section>
+                </section>
+                <br>
+                <section class="portfolio" id="portfolio">
+                    <section class="portfolioHeading">
+                        <h2>Portfolio</h2>
+                    </section>
+                    <section class="portfolioContent">
+                        <section class="preworkStudyGuide">
+                            <p>
+                                Prework Study Guide
+                            </p>
+                            <section class="preworkStudyGuideContent">
+                                <img src="./assets/images/preworkStudy.PNG" alt="Screenshot of prework study guide website" class="screenShot" />
+                            </section>
+                        </section>
+                        <section class="horiseon">
+                            <p>
+                                Horiseon
+                            </p>
+                            <section class="horiseonContent">
+                                <img src="./assets/images/horiseon.PNG" alt="Screenshot of first project with website name of Horiseon" class="screenShot" />
+                            </section>
+                        </section>
                    </section>
                </section>
             </section>
