added navigation and headings for different elements in my portfolio

--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     </head>
     <body>
         <header>
-            <section class="header">
-                <h1>Stephen Merki's Portfolio</h1>
-            </section>
+            <h1>Stephen Merki's Portfolio</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about">About Me</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact Me</a></li>
+                </ul>
+            </nav>
+        </section>
         </header>
         <main>
             <section class="content">
@@ -38,23 +44,32 @@
                     </section>
                     <section class="portfolioContent">
                         <section class="preworkStudyGuide">
-                            <p>
+                            <h3>
                                 Prework Study Guide
-                            </p>
+                            </h3>
                             <section class="preworkStudyGuideContent">
                                 <img src="./assets/images/preworkStudy.PNG" alt="Screenshot of prework study guide website" class="screenShot" />
                             </section>
                         </section>
                         <section class="horiseon">
-                            <p>
+                            <h3>
                                 Horiseon
-                            </p>
+                            </h3>
                             <section class="horiseonContent">
                                 <img src="./assets/images/horiseon.PNG" alt="Screenshot of first project with website name of Horiseon" class="screenShot" />
                             </section>
                         </section>
-                   </section>
-               </section>
+                    </section>
+                </section>
+                <br>
+                <section class="contact" id="contact">
+                    <section class="contactHeader">
+                        <h2>Contact Me</h2>
+                    </section>
+                    <section class="contactContent">
+
+                    </section>
+                </section>
             </section>
         </main>
         <footer>
