Added footer content and added contact content

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
                             <a href="ultimatewrestlingtrivia.com">ultimatewrestlingtrivia.com</a> as a full stack web developer. 
                         </p>
                         <p>
-                            Programming languages that I am comfortable
-                            in are HTML, CSS, PHP, JavaScript (DOM), Java, and C++.
+                            Programming languages that I know are HTML, CSS, PHP, JavaScript (DOM), Java, and C++.
                         </p>
                     </section>
                 </section>
@@ -67,13 +66,14 @@
                         <h2>Contact Me</h2>
                     </section>
                     <section class="contactContent">
-
+                        <p>Email: <a href="mailto:stephen.merki232@gmail.com">stephen.merki232@gmail.com</a></p>
                     </section>
                 </section>
             </section>
         </main>
         <footer>
             <p>GitHub: <a href="https://github.com/stev232">stev232</a></p>
+            <p>Made by: Stephen Merki</p>
         </footer>
     </body>
 </html>
