updated css to follow acceptance criteria and made images into hyperlinks

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <h2>About Me</h2>
                     </section>
                     <section class="aboutContent">
-                        <img src="./assets/images/stephen.jpg" alt="An image of Stephen Merki" class="personalPicture" />
+                        <a href="https://github.com/stev232"><img src="./assets/images/stephen.jpg" alt="An image of Stephen Merki" class="personalPicture" /></a>
                         <p>
                             My name is Stephen (Stee-v-en) Merki (Mur-key). I am currently enrolled in University Wisconsin Coding Bootcamp.
                             I have two associates degrees; Network Administration, Network and Software Support. I have one year professional
@@ -47,7 +47,7 @@
                                 Prework Study Guide
                             </h3>
                             <section class="preworkStudyGuideContent">
-                                <img src="./assets/images/preworkStudy.PNG" alt="Screenshot of prework study guide website" class="screenShot" />
+                                <a href="https://stev232.github.io/prework-study-guide/" target="_blank"><img src="./assets/images/preworkStudy.PNG" alt="Screenshot of prework study guide website" class="screenShot" id="imgPreworkSG" /></a>
                             </section>
                         </section>
                         <section class="horiseon">
@@ -55,14 +55,14 @@
                                 Horiseon
                             </h3>
                             <section class="horiseonContent">
-                                <img src="./assets/images/horiseon.PNG" alt="Screenshot of first project with website name of Horiseon" class="screenShot" />
+                                <a href="https://stev232.github.io/Horiseon/" target="_blank"><img src="./assets/images/horiseon.PNG" alt="Screenshot of first project with website name of Horiseon" class="screenShot" id="imgHoriseon" /></a>
                             </section>
                         </section>
                     </section>
                 </section>
                 <br>
                 <section class="contact" id="contact">
-                    <section class="contactHeader">
+                    <section class="contactHeading">
                         <h2>Contact Me</h2>
                     </section>
                     <section class="contactContent">
@@ -72,8 +72,8 @@
             </section>
         </main>
         <footer>
-            <p>GitHub: <a href="https://github.com/stev232">stev232</a></p>
-            <p>Made by: Stephen Merki</p>
+            <p><strong>GitHub</strong>: <a href="https://github.com/stev232">stev232</a></p>
+            <p><strong>Made by: Stephen Merki</strong></p>
         </footer>
     </body>
 </html>
