removed a line from html doc

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                         <p>
                             My name is Stephen (Stee-v-en) Merki (Mur-key). I am currently enrolled in University Wisconsin Coding Bootcamp.
                             I have two associates degrees; Network Administration, Network and Software Support. I have one year professional
-                            experience working in web development for Ignis Solutions on their website 
-                            <a href="ultimatewrestlingtrivia.com">ultimatewrestlingtrivia.com</a> as a full stack web developer. 
+                            experience working in web development. 
                         </p>
                         <p>
                             Programming languages that I know are HTML, CSS, PHP, JavaScript (DOM), Java, and C++.
