added target=_blank to github url so it opens in a new tab

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <h2>About Me</h2>
                     </section>
                     <section class="aboutContent">
-                        <a href="https://github.com/stev232"><img src="./assets/images/stephen.jpg" alt="An image of Stephen Merki" class="personalPicture" /></a>
+                        <a href="https://github.com/stev232" target="_blank"><img src="./assets/images/stephen.jpg" alt="An image of Stephen Merki" class="personalPicture" /></a>
                         <p>
                             My name is Stephen (Stee-v-en) Merki (Mur-key). I am currently enrolled in University Wisconsin Coding Bootcamp.
                             I have two associates degrees; Network Administration, Network and Software Support. I have one year professional
