added descriptions for the webpages that are included in my portfolio.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                             </h3>
                             <section class="preworkStudyGuideContent">
                                 <a href="https://stev232.github.io/prework-study-guide/" target="_blank"><img src="./assets/images/preworkStudy.PNG" alt="Screenshot of prework study guide website" class="screenShot" id="imgPreworkSG" /></a>
+                                <p>The prework study guide was used to help get me ready for the semester. It was built using primarily HTML and CSS with a little bit of JavaScript. The prework study guide taught me how to work with the git bash terminal and upload to github.</p><br>
                             </section>
                         </section>
                         <section class="horiseon">
@@ -55,6 +56,7 @@
                             </h3>
                             <section class="horiseonContent">
                                 <a href="https://stev232.github.io/Horiseon/" target="_blank"><img src="./assets/images/horiseon.PNG" alt="Screenshot of first project with website name of Horiseon" class="screenShot" id="imgHoriseon" /></a>
+                                <p>Horiseon is the first project that we were given in class and it is an exercise in making an already built webpage more accessible.</p><br>
                             </section>
                         </section>
                     </section>
