Linked script.js file and added projects that I have completed in class and in my free time.

--- a/index.html
+++ b/index.html
@@ -50,13 +50,40 @@
                                 <p>The prework study guide was used to help get me ready for the semester. It was built using primarily HTML and CSS with a little bit of JavaScript. The prework study guide taught me how to work with the git bash terminal and upload to github.</p><br>
                             </section>
                         </section>
-                        <section class="horiseon">
+                        <section class="horiseon projects">
                             <h3>
                                 Horiseon
                             </h3>
-                            <section class="horiseonContent">
+                            <section class="horiseonContent projectsContent">
                                 <a href="https://stev232.github.io/Horiseon/" target="_blank"><img src="./assets/images/horiseon.PNG" alt="Screenshot of first project with website name of Horiseon" class="screenShot" id="imgHoriseon" /></a>
                                 <p>Horiseon is the first project that we were given in class and it is an exercise in making an already built webpage more accessible.</p><br>
+                            </section>
+                        </section>
+                        <section class="passwordGen projects">
+                            <h3>
+                                Stev232's Password Generator
+                            </h3>
+                            <section class="passwordGenContent projectsContent">
+                                <a href="https://stev232.github.io/Stev232sPasswordGenerator/" target="_blank"><img src="./assets/images/passwordGen.PNG" alt="Screenshot of second project with website name of Stev232s Password Generator" class="screenShot" id="imgPasswordGen" /></a>
+                                <p>My password generator was the first project utilizing javascript for the class.</p><br>
+                            </section>
+                        </section>
+                        <section class="codeQuiz projects">
+                            <h3>
+                                Stev232's Code Quiz
+                            </h3>
+                            <section class="codeQuizContent projectsContent">
+                                <a href="https://stev232.github.io/Stev232sCodeQuiz/" target="_blank"><img src="./assets/images/codeQuiz.PNG" alt="Screenshot of second project with website name of Stev232s Password Generator" class="screenShot" id="imgCodeQuiz" /></a>
+                                <p>My code quiz features saving data locally with javascript.</p><br>
+                            </section>
+                        </section>
+                        <section class="colorGrid projects">
+                            <h3>
+                                Stev232's Color Grid
+                            </h3>
+                            <section class="colorGridContent projectsContent">
+                                <a href="https://stev232.github.io/Stev232sColorGrid/" target="_blank"><img src="./assets/images/colorGrid.PNG" alt="Screenshot of second project with website name of Stev232s Password Generator" class="screenShot" id="imgColorGrid" /></a>
+                                <p>This project does not work on mobile. For the page layout I used <a href="https://getbootstrap.com/">bootstrap</a> to set the grid. My color grid project is a demonstration of using an array in javascript along with two event listeners. Those listeners are looking for the mouseover event and the click event.</p><br>
                             </section>
                         </section>
                     </section>
@@ -76,5 +103,6 @@
             <p><strong>GitHub</strong>: <a href="https://github.com/stev232">stev232</a></p>
             <p><strong>Made by: Stephen Merki</strong></p>
         </footer>
+        <script src="./assets/js/scripts.js"></script>
     </body>
 </html>
